Fix missing texts in reader on safari

--- a/src/scss/mixins/helpers/_invisible.scss
+++ b/src/scss/mixins/helpers/_invisible.scss
@@ -3,7 +3,6 @@
 	cursor: default;
 	pointer-events: none;
 	display: block;
-	opacity: 0;
 	position: absolute;
 	top: 0;
 	left: 0;
